--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,31 @@
-name: CI
+name: LiveUnicode_CI
 
-on:
-  push:
-    branches: [main]
-  pull_request:
+
+on: [push, pull_request]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
-      - uses: actions/checkout@v3
-      - uses: julia-actions/setup-julia@v1
-        with:
-          version: '1.11'
-      - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-runtest@v1
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Julia
+      uses: julia-actions/setup-julia@v1
+      with:
+        version: '1.11'
+
+    - name: Cache Julia packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.julia/artifacts
+        key: ${{ runner.os }}-julia-${{ hashFiles('**/Project.toml') }}
+        restore-keys: |
+          ${{ runner.os }}-julia-
+
+    - name: Install dependencies
+      run: julia --project -e 'using Pkg; Pkg.instantiate()'
+
+    - name: Run unit tests
+      run: julia --project -e 'using Pkg; Pkg.test()'
